<resources>
    <string name="app_name">bosqueApp</string>
    <string name="peligro">Peligro!</string>
    <string name="aumento_de_la_temperatura">Aumento de la temperatura</string>
    <string name="aceptar">Aceptar</string>
    <string name="se_al_de_peligro">Señal de peligro</string>
    <string name="peligroacc">Peligro</string>
    <string name="usuariobutton">UsuarioButton</string>
    <string name="inicio">Inicio</string>
    <string name="notificacionesacc">NotificacionesAcc</string>
    <string name="bosque_centro">Bosque Centro</string>
    <string name="rea_1500x1500_npropagaci_n_alta">Héctareas: 1500\nPropagación: Media</string>
    <string name="bosque_centro_zona_propensa_a_incendios">Bosque Centro: Zona propensa a incendios</string>
    <string name="bosque_norte">Bosque Norte</string>
    <string name="bosque_sur_zona_rural_afectada_anualmente_por_incendios">Bosque Sur: Zona rural afectada anualmente por incendios</string>
    <string name="bosquecentral">BosqueCentral</string>
    <string name="bosquesur">bosquesur</string>
    <string name="llamar_a_servicios_de_emergencia">Llamar a servicios de emergencia</string>
    <string name="grafico">grafico</string>
    <string name="contactos_de_emergencia">Contactos de Emergencia</string>
    <string name="bomberos">Bomberos</string>
    <string name="n_mero_133">Número: 133</string>
    <string name="carabineros">Carabineros</string>
    <string name="llamar_a_bomberos">Llamar a bomberos</string>
    <string name="n_mero_132">Número: 132</string>
    <string name="llamar_bomberos">Llamar Bomberos</string>
    <string name="carabineros_y_policia_de_chile">carabineros y policia de Chile</string>
    <string name="llamar_carabineros">Llamar Carabineros</string>
    <string name="ambulanciaicon">ambulanciaIcon</string>
    <string name="llamar_ambulancia">Llamar Ambulancia</string>
    <string name="n_mero_131">Número: 131</string>
    <string name="ambulancia">Ambulancia</string>
    <string name="conaficon">ConafIcon</string>
    <string name="conaf">CONAF</string>
    <string name="n_mero_130">Número: 130</string>
    <string name="llamar_conaf">Llamar CONAF</string>
    <string name="vincular_cuanta">vincular cuanta</string>
    <string name="vincular_cuenta">vincular cuenta</string>
    <string name="selecione_cuenta_a_vincular">selecione cuenta a vincular</string>
    <string name="cuenta_de_google">cuenta de google</string>
    <string name="cuenta_de_facebook">cuenta de facebook</string>
    <string name="cuenta_de_instagram">cuenta de instagram</string>
    <string name="no_tiene_una_cuenta">¿no tiene una cuenta?</string>
    <string name="crear_cuenta">crear cuenta</string>
    <string name="vincular_un_dispositivo">Vincular un dispositivo</string>
    <string name="dispositivos_vinculados">Dispositivos vinculados</string>
    <string name="mas_informacion">Más informacion</string>
    <string name="utilizar_sensor_en_este_dispositivo">Utilizar el sensor para este dispositivo</string>
    <string name="vincular_dispositivo">Vincular dispositivo</string>
    <string name="sensor_1">Sensor #1</string>
    <string name="iniciar_sesion">Inicie sesión</string>
    <string name="username">Ingrese su nombre de usuario</string>
    <string name="password">Ingrese su contraseña</string>
    <string name="iniciar">Acceder</string>
    <string name="recordar_contrase_a">¿Ólvidaste tu contraseña?</string>
    <string name="contrase_a_hint">Contraseña hint</string>
    <string name="nombre_usuario_hint">Nombre Usuario Hint</string>
    <string name="insertar_dispositivos_vinculados">Insertar dispositivos vinculados</string>
    <string name="main_menu">Menu Principal\n</string>
    <string name="profile">Tu perfil</string>
    <string name="settings">Opciones</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="tu_nombre_de_usuario">Tu nombre de usuario</string>
    <string name="tu_foto_de_perfil">Tu foto de perfil</string>
    <string name="tu_correo_electr_nico">Tu correo electrónico</string>
    <string name="edita_tu_perfil">Edita tu perfil</string>
    <string name="tu_numero_de_tel_fono">Tu numero de teléfono</string>
    <string name="x">+569XXXXXXXX</string>
    <string name="tu_nombre">Tu nombre</string>
    <string name="correo">Correo electrónico</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="icono_de_perfil">icono de perfil</string>
    <string name="mira_tu_perfil">Mira tu perfil</string>
    <string name="icono_de_contacto_de_emergencia">icono de contacto de emergencia</string>
    <string name="contactos_de_emergencia2">Contactos de emergencia</string>
    <string name="acude_a_los_servicios_de_emergencias">Acude a los servicios de emergencias</string>
    <string name="icono_de_vinculaci_n_de_dispositivo">Icono de vinculación de dispositivo</string>
    <string name="vincular_a_sensor">Vincular a sensor</string>
    <string name="icono_de_zona">Icono de zona</string>
    <string name="tu_zona">Tu zona</string>
    <string name="mira_la_informaci_n_de_los_bosques_cercanos">Mira la información de los bosques cercanos</string>
    <string name="icono_de_notificaciones">icono de notificaciones</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="revisa_las_notificaciones">Revisa las notificaciones</string>
    <string name="crear_dispositivo">Crear Dispositivo</string>
    <string name="lista_de_dispositivos">Lista de Dispositivos</string>
    <string name="creaci_n_de_dispositivos">Creación de Dispositivos</string>
    <string name="nombre_del_dispositivo">Nombre del dispositivo</string>
    <string name="guardar_dispositivo">Guardar dispositivo</string>
    <string name="ver_dispositivo">Ver dispositivo</string>
    <string name="confirme_su_contrase_a">Confirme su contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="registraci_n">Registración</string>
    <string name="no_tienes_cuenta_registrate_aqu">No tienes cuenta? Registrate aquí</string>
    <string name="crea_los_dispositivos_a_usar">Crea los dispositivos a usar</string>
    <string name="indique_su_correo_electr_nico">Indique su correo electrónico</string>
    <string name="volver">Volver</string>
    <string name="volver1">Volver</string>
    <string name="guardar">Guardar</string>
    <string name="descripci_n_del_dispositivo">Descripción del dispositivo</string>
    <string name="tipo_de_dispositivo">Tipo de dispositivo</string>
    <string name="nombre_del_dispositivo1">Nombre del dispositivo</string>
    <string name="volver2">Volver</string>
    <string name="sensor_de_humedad_y_temperatura_de_arduino">Datos de sensor de temperatura y humedad de Firebase </string>
    <string name="datos_de_arduino">Datos de Arduino</string>
    <string name="consulta_los_datos_de_arduino_actualizados_en_tiempo_real">Consulta los datos de Arduino, actualizados en tiempo real</string>
</resources>