<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/fondo">

    <!-- Lista de Zonas Propensas -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/bosquesur"
                    android:src="@drawable/bosquesur">
                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bosque_sur_zona_rural_afectada_anualmente_por_incendios"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/bosquecentral"
                    android:src="@drawable/bosquecentral" >
                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bosque_centro_zona_propensa_a_incendios"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/black"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <!-- Gráfico y Detalles -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bosque_norte"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <!-- Puedes agregar un gráfico personalizado aquí -->
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/grafico"
            android:src="@drawable/pie_chart" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/rea_1500x1500_npropagaci_n_alta"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>
    <!-- Barra de Navegación Inferior -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <!-- Icono de Usuario -->
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/usuariobutton"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:src="@drawable/user" />

            <!-- Icono de Inicio -->
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/inicio"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:src="@drawable/house_outline" />

            <!-- Icono de Notificaciones -->
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/notificacionesacc"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:src="@drawable/notification_icon" />

        </LinearLayout>
    </FrameLayout>
</LinearLayout>
