<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo">

    <LinearLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:gravity="center"
            android:text="@string/vincular_dispositivo"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/utilizar_sensor_en_este_dispositivo"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <!-- MaterialButton -->
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/black"
            android:text="@string/vincular_un_dispositivo"
            android:textColor="@android:color/white"
            app:cornerRadius="8dp" />

        <!-- CardView -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/grey"
            android:elevation="4dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/insertar_dispositivos_vinculados"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:elevation="8dp"
        android:orientation="horizontal">

        <!-- Icono de Usuario -->
        <ImageButton
            android:id="@+id/userButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/usuariobutton"
            android:padding="12dp"
            android:scaleType="fitCenter"
            android:src="@drawable/user" />

        <!-- Icono de Inicio -->
        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/inicio"
            android:padding="12dp"
            android:scaleType="fitCenter"
            android:src="@drawable/house_outline" />

        <!-- Icono de Notificaciones -->
        <ImageButton
            android:id="@+id/notificationsButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/notificacionesacc"
            android:padding="12dp"
            android:scaleType="fitCenter"
            android:src="@drawable/notification_icon" />
    </LinearLayout>

</RelativeLayout>
